{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 68,
  "lineage": "51533eb2-5197-2fd0-eb7b-a801ba5107c3",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:internet-gateway/igw-03bdba56e18c617e8",
            "id": "igw-03bdba56e18c617e8",
            "owner_id": "730335515098",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-tech-challenge"
            },
            "tags_all": {
              "Name": "igw-tech-challenge"
            },
            "vpc_id": "vpc-0efd280249df00706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059cb7e3e08bc40e1",
            "arn": "arn:aws:ec2:us-east-1:730335515098:elastic-ip/eipalloc-059cb7e3e08bc40e1",
            "association_id": "eipassoc-07c9971ffb4183d9d",
            "domain": "vpc",
            "id": "eipalloc-059cb7e3e08bc40e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0777f4a710e156f9b",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_ip": "10.0.2.100",
            "public_dns": "ec2-107-23-49-176.compute-1.amazonaws.com",
            "public_ip": "107.23.49.176",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059cb7e3e08bc40e1",
            "association_id": "eipassoc-07c9971ffb4183d9d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fe1c8780cff786e9",
            "network_interface_id": "eni-0777f4a710e156f9b",
            "private_ip": "10.0.2.100",
            "public_ip": "107.23.49.176",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c1c90014d1da007e",
            "tags": {
              "Name": "ngw-tech-challenge"
            },
            "tags_all": {
              "Name": "ngw-tech-challenge"
            },
            "vpc_id": "vpc-0efd280249df00706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.ngw.aws_eip.eip_nat_tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_priv",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:route-table/rtb-0252fc5cefa960118",
            "id": "rtb-0252fc5cefa960118",
            "owner_id": "730335515098",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fe1c8780cff786e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-table-tech-challenge"
            },
            "tags_all": {
              "Name": "rt-table-tech-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efd280249df00706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "rtb-0252fc5cefa960118",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.ngw.aws_eip.eip_nat_tech_challenge",
            "module.ngw.aws_nat_gateway.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_priv",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0553aeaae3f2ffd59",
            "region": "us-east-1",
            "route_table_id": "rtb-0252fc5cefa960118",
            "subnet_id": "subnet-0b1bbfcccd34df422"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.ngw.aws_eip.eip_nat_tech_challenge",
            "module.ngw.aws_nat_gateway.tech_challenge",
            "module.route_table_priv.aws_route_table.tech_challenge",
            "module.subnet_priv_a.aws_subnet.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_priv",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a764d4322d656f34",
            "region": "us-east-1",
            "route_table_id": "rtb-0252fc5cefa960118",
            "subnet_id": "subnet-01699f8796c5eb608"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.ngw.aws_eip.eip_nat_tech_challenge",
            "module.ngw.aws_nat_gateway.tech_challenge",
            "module.route_table_priv.aws_route_table.tech_challenge",
            "module.subnet_priv_b.aws_subnet.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_pub",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:route-table/rtb-0d3a38de08732b843",
            "id": "rtb-0d3a38de08732b843",
            "owner_id": "730335515098",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bdba56e18c617e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-table-tech-challenge"
            },
            "tags_all": {
              "Name": "rt-table-tech-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efd280249df00706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "rtb-0d3a38de08732b843",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_pub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2167df9aa0ae945",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3a38de08732b843",
            "subnet_id": "subnet-0c1c90014d1da007e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.route_table_pub.aws_route_table.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_pub",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcbf45c86e906160",
            "region": "us-east-1",
            "route_table_id": "rtb-0d3a38de08732b843",
            "subnet_id": "subnet-0d36496ee7668c34f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.tech_challenge",
            "module.route_table_pub.aws_route_table.tech_challenge",
            "module.subnet_pub_a.aws_subnet.tech_challenge",
            "module.subnet_pub_b.aws_subnet.tech_challenge",
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_priv_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:subnet/subnet-0b1bbfcccd34df422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1bbfcccd34df422",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335515098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-priv-a-tech-challenge"
            },
            "tags_all": {
              "Name": "subnet-priv-a-tech-challenge"
            },
            "vpc_id": "vpc-0efd280249df00706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "subnet-0b1bbfcccd34df422",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_priv_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:subnet/subnet-01699f8796c5eb608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01699f8796c5eb608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335515098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-priv-b-tech-challenge"
            },
            "tags_all": {
              "Name": "subnet-priv-b-tech-challenge"
            },
            "vpc_id": "vpc-0efd280249df00706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "subnet-01699f8796c5eb608",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_pub_a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:subnet/subnet-0c1c90014d1da007e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c90014d1da007e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335515098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-pub-a-tech-challenge"
            },
            "tags_all": {
              "Name": "subnet-pub-a-tech-challenge"
            },
            "vpc_id": "vpc-0efd280249df00706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "subnet-0c1c90014d1da007e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_pub_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:subnet/subnet-0d36496ee7668c34f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d36496ee7668c34f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335515098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-pub-b-tech-challenge"
            },
            "tags_all": {
              "Name": "subnet-pub-b-tech-challenge"
            },
            "vpc_id": "vpc-0efd280249df00706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "subnet-0d36496ee7668c34f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335515098:vpc/vpc-0efd280249df00706",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ef73ebec99fb12d",
            "default_route_table_id": "rtb-0662ae10674715021",
            "default_security_group_id": "sg-0f63a8167ea7993b9",
            "dhcp_options_id": "dopt-048ff7188271ff031",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efd280249df00706",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0662ae10674715021",
            "owner_id": "730335515098",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-tech-challenge"
            },
            "tags_all": {
              "Name": "vpc-tech-challenge"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "730335515098",
            "id": "vpc-0efd280249df00706",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}